--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="Header__container Container">
+        <div class="Container">
             <div class="Header__logo Logo">
-                <img src="./Image/Logo-1.svg" alt="">
+                <img src="./Image/Logo/Logo-1.svg" alt="">
             </div>
             <div class="Header__right">
                 <button class="Lang Main-button">
@@ -22,12 +22,6 @@
                 <button class="SignUp Main-button Primary-button">Sign up</button>
                 <button class="LogIn Main-button Outline-button">Log in</button>
                 <div class="Burger-button" data-button="burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="Accordion Main-button" data-button="accordion">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -89,6 +83,32 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="Welcome">
+            <div class="Container">
+                <div class="Welcome__text">
+                    <h1 class="Welcome__title">
+                        Make learning fun!
+                    </h1>
+                    <p class="Welcome__subtitle">
+                        Any subject, in any language, on any
+                        device, for all ages!
+                    </p>
+                    <button class="Main-button Primary-button">
+                        Sign up for free
+                    </button>
+                    <div class="Welcome__app">
+                        <p>Or download the app:</p>
+                        <a href="#"><img src="./Image/Apps/App-Store.png" alt=""></a>
+                        <a href="#"><img src="./Image/Apps/Google-Play.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="Welcome__image">
+                    <img src="./Image/Welcome_image.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./Script/Script.js"></script>
 </body>
