--- a/Index.html
+++ b/Index.html
@@ -108,6 +108,75 @@
                 </div>
             </div>
         </section>
+        <section class="Audience">
+            <div class="Container">
+                <div class="Audience__element Audience__header">
+                    <h2 class="Audience__title">Who is Kurtis for?</h2>
+                    <span></span>
+                </div>
+                <div class="Audience__content">
+                    <div class="Audience__item">
+                        <div class="Audience__img">
+                            <img src="./Image/Audience/Audience-1.svg" alt="">
+                        </div>
+                        <h3 class="Audience__item-title">
+                            At School
+                        </h3>
+                        <p class="Audience__item-subtitle">
+                            Engaging group and
+                            distance learning for
+                            teachers and students.
+                        </p>
+                        <a href="#" class="Audience__link">Learn more</a>
+                    </div>              
+                    <div class="Audience__item">
+                        <div class="Audience__img">
+                            <img src="./Image/Audience/Audience-2.svg" alt="">
+                        </div>
+                        <h3 class="Audience__item-title">
+                            At work
+                        </h3>
+                        <p class="Audience__item-subtitle">
+                            For training, e-learning,
+                            interactive presentations
+                            and more.
+                        </p>
+                        <a href="#" class="Audience__link">Learn more</a>
+                    </div>              
+                    <div class="Audience__item">
+                        <div class="Audience__img">
+                            <img src="./Image/Audience/Audience-3.svg" alt="">
+                        </div>
+                        <h3 class="Audience__item-title">
+                            At home
+                        </h3>
+                        <p class="Audience__item-subtitle">
+                            Apps and games for
+                            family fun or home
+                            study.
+                        </p>
+                        <a href="#" class="Audience__link">Learn more</a>
+                    </div>              
+                    <div class="Audience__item">
+                        <div class="Audience__img">
+                            <img src="./Image/Audience/Audience-4.svg" alt="">
+                        </div>
+                        <h3 class="Audience__item-title">
+                            Learning apps
+                        </h3>
+                        <p class="Audience__item-subtitle">
+                            Engage kids with the
+                            Kahoot! family of
+                            learning apps
+                        </p>
+                        <a href="#" class="Audience__link">Learn more</a>
+                    </div>              
+                </div>
+                <div class="Audience__element Audience__footer">
+                    <button class="Main-button Primary-button">SIGN UP NOW</button>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./Script/Script.js"></script>
