--- a/Index.html
+++ b/Index.html
@@ -110,7 +110,7 @@
         </section>
         <section class="Audience">
             <div class="Container">
-                <div class="Audience__element Audience__header">
+                <div class="Audience__header Section-block">
                     <h2 class="Audience__title">Who is Kurtis for?</h2>
                     <span></span>
                 </div>
@@ -172,10 +172,90 @@
                         <a href="#" class="Audience__link">Learn more</a>
                     </div>              
                 </div>
-                <div class="Audience__element Audience__footer">
+                <div class="Audience__footer Section-block">
                     <button class="Main-button Primary-button">SIGN UP NOW</button>
                 </div>
             </div>
+        </section>
+        <section class="Courses">
+            <div class="Courses__header Section-block">
+                <h2 class="Courses__title">Amazing things are happening</h2>
+                <span></span>
+            </div>
+            <div class="Courses__swiper swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="Courses__item-1 Courses__item">
+                            <h3 class="Courses__item-title">
+                                Kurtis Classroom
+                            </h3>
+                            <p class="Courses__item-subtitle">
+                                The next generation of
+                                corporate learning.
+                            </p>
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="Courses__item-2 Courses__item">
+                            <h3 class="Courses__item-title">
+                                Kurtis Classroom
+                            </h3>
+                            <p class="Courses__item-subtitle">
+                                The next generation of
+                                corporate learning.
+                            </p>
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="Courses__item-3 Courses__item">
+                            <div class="Courses__item-label">New</div>
+                            <h3 class="Courses__item-title">
+                                Premium+ 
+                                for schools
+                            </h3>
+                            <p class="Courses__item-subtitle">
+                                Create and teach interactive
+                                lessons students will love!
+                            </p>
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="Courses__item-4 Courses__item">
+                            <div class="Courses__item-label">New</div>
+                            <h3 class="Courses__item-title">
+                                Integration with 
+                                Microsoft Teams
+                            </h3>
+                            <p class="Courses__item-subtitle">
+                                Make remote work better with
+                                our powerful integration.
+                            </p>
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="Courses__item-5 Courses__item">
+                            <div class="Courses__item-label">New</div>
+                            <h3 class="Courses__item-title">
+                                Join the kurtis
+                                of week
+                            </h3>
+                            <p class="Courses__item-subtitle">
+                                In cooperation with Quizzes
+                                Educate About Implicit Bias & Inclusion
+                            </p>
+                            <a href="#">Join now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+        <section class="Code">
+            
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
