--- a/Index.html
+++ b/Index.html
@@ -255,7 +255,27 @@
             </div>
         </section>
         <section class="Code">
-            
+            <div class="Section-block Code__header">
+                <h2 class="Code__title">Do you have a game code?</h2>
+                <p>Let’s play for a while!</p>
+            </div>
+            <div class="Code__wrapper">
+                <div class="Code__game-code">
+                    <div class="Logo">
+                        <img src="./Image/Logo/Logo-2.svg" alt="">
+                    </div>
+                    <div class="Code__input">
+                        <input type="text" placeholder="Write the code here" maxlength="4">
+                        <svg width="30" height="33" viewBox="0 0 35 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M33.7678 20.7678C34.7441 19.7915 34.7441 18.2085 33.7678 17.2322L17.8579 1.32233C16.8816 0.34602 15.2986 0.34602 14.3223 1.32233C13.346 2.29864 13.346 3.88155 14.3223 4.85786L28.4645 19L14.3223 33.1421C13.346 34.1184 13.346 35.7014 14.3223 36.6777C15.2986 37.654 16.8816 37.654 17.8579 36.6777L33.7678 20.7678ZM0 19L0 21.5L32 21.5V19V16.5L0 16.5L0 19Z" fill="#979797"/>
+                        </svg>
+                    </div>
+                    <p>Or try with 1234</p>
+                </div>
+            </div>
+            <div class="Section-block Code__footer">
+                <p>Still more? <a href="#">Take a look to our features games</a></p>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
