--- a/Index.html
+++ b/Index.html
@@ -277,6 +277,61 @@
                 <p>Still more? <a href="#">Take a look to our features games</a></p>
             </div>
         </section>
+        <section class="Process">
+            <div class="Process__header Section-block">
+                <h2 class="Process__title">
+                    How does Kurtis work? 
+                </h2>
+                <span></span>
+            </div>
+            <div class="Container">
+                <div class="Process__item">
+                    <div class="Process__image">
+                        <img src="./Image/Process/Process-1.png" alt="">
+                    </div>
+                    <div class="Process__item-text">
+                        <h3 class="Process__item-title">
+                            Create
+                        </h3>
+                        <p class="Process__item_desc">
+                            It only takes minutes to create a
+                            learning game or trivia quiz on
+                            any topic, in any language.
+                        </p>
+                    </div>
+                </div>
+                <div class="Process__item">
+                    <div class="Process__image">
+                        <img src="./Image/Process/Process-2.png" alt="">
+                    </div>
+                    <div class="Process__item-text">
+                        <h3 class="Process__item-title">
+                            Host or share
+                        </h3>
+                        <p class="Process__item_desc">
+                            Host a live game with questions
+                            on a big screen or share a game
+                            with remote players.
+                        </p>
+                    </div>
+                </div>
+                <div class="Process__item">
+                    <div class="Process__image">
+                        <img src="./Image/Process/Process-3.png" alt="">
+                    </div>
+                    <div class="Process__item-text">
+                        <h3 class="Process__item-title">
+                            Play
+                        </h3>
+                        <p class="Process__item_desc">
+                            Game on! Join a kahoot with a
+                            PIN provided by the host and
+                            answer questions on your device.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./Script/Script.js"></script>
