--- a/Index.html
+++ b/Index.html
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination Courses-pagination"></div>
             </div>
         </section>
         <section class="Code">
@@ -330,6 +330,89 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="Customers">
+            <div class="Customers__header Section-block">
+                <h2 class="Customers__title">
+                    Our best customers
+                </h2>
+                <span></span>
+            </div>
+            <div class="Customers__swiper swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="Customer">
+                            <div class="Customer__feedback">
+                                <div class="Customer__bubble">
+                                    I love these games!
+                                </div>
+                                <div class="Customer__avatar">
+                                    <img src="./Image/Avatar.png" alt="">
+                                </div>
+                            </div>
+                            <div class="Customer__Review">
+                                <div class="Customer__info">
+                                    <h3 class="Customer__name">Martha</h3>
+                                    <span></span>
+                                    <p class="Customer__position">Norwegian Air</p>
+                                </div>
+                                <div class="Customer__text">
+                                    <p>
+                                        Recusandae sunt voluptate repellat velit
+                                        dolorem eos nostrum cupiditate. Labore
+                                        porro cupiditate reiciendis enim neque.
+                                        Modi eos autem expedita voluptatibus
+                                        dignissimos repellat.
+                                    </p>
+                                    <p>
+                                        Sit et aut minus quod vitae.Aut occaecati
+                                        cupiditate neque dolore amet beatae quasi
+                                        aliquam.</p>
+                                </div>
+                                <div class="Customer__review-img">
+                                    <img src="./Image/image 4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="Customer">
+                            <div class="Customer__feedback">
+                                <div class="Customer__bubble">
+                                    I love these games!
+                                </div>
+                                <div class="Customer__avatar">
+                                    <img src="./Image/Avatar.png" alt="">
+                                </div>
+                            </div>
+                            <div class="Customer__Review">
+                                <div class="Customer__info">
+                                    <h3 class="Customer__name">Martha</h3>
+                                    <span></span>
+                                    <p class="Customer__position">Norwegian Air</p>
+                                </div>
+                                <div class="Customer__text">
+                                    <p>
+                                        Recusandae sunt voluptate repellat velit
+                                        dolorem eos nostrum cupiditate. Labore
+                                        porro cupiditate reiciendis enim neque.
+                                        Modi eos autem expedita voluptatibus
+                                        dignissimos repellat.
+                                    </p>
+                                    <p>
+                                        Sit et aut minus quod vitae.Aut occaecati
+                                        cupiditate neque dolore amet beatae quasi
+                                        aliquam.</p>
+                                </div>
+                                <div class="Customer__review-img">
+                                    <img src="./Image/image 4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination Customers-pagination"></div>
             </div>
         </section>
     </main>
