--- a/Index.html
+++ b/Index.html
@@ -415,6 +415,43 @@
                 <div class="swiper-pagination Customers-pagination"></div>
             </div>
         </section>
+        <section class="Learning">
+            <div class="Container">
+                <div class="Learning__header">
+                    <div class="Learning__header-item">
+                    More than 50% of US
+                    teachers use Kurtis
+                    </div>
+                    <div class="Learning__header-item">
+                    Players in more than 
+                    200 countries
+                    </div>
+                    <div class="Learning__header-item">
+                    Over 30 million public
+                    games available
+                    </div>
+                    <div class="Learning__header-item">
+                    97% of the Fortune
+                    500 use Kurtis
+                    </div>
+                </div>
+                <div class="Learning__content">
+                    <div class="Learning__img">
+                        <img src="./Image/Learning-1.png" alt="">
+                    </div>
+                    <div class="Learning__text">
+                        <h2 class="Learning__title">
+                            Ready for make
+                            learning fun!
+                        </h2>
+                        <button class="Main-button Primary-button">
+                            Sign up for free
+                        </button>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./Script/Script.js"></script>
