--- a/Index.html
+++ b/Index.html
@@ -453,6 +453,116 @@
             
         </section>
     </main>
+    <footer>
+        <div class="Container">
+            <div class="Footer__content">
+                <div class="Footer__main">
+                    <div class="Footer__logo">
+                        <img src="./Image/Logo/Logo-2.svg" alt="">
+                    </div>
+                    <div class="Footer__app">
+                        <p>Get the app:</p>
+                        <a href="#"><img src="./Image/Apps/App-Store.png" alt=""></a>
+                        <a href="#"><img src="./Image/Apps/Google-Play.png" alt=""></a>
+                        <a href="#"><img src="./Image/Apps/AppGallery.png" alt=""></a>
+                    </div>
+                    <div class="Footer__socials">
+                        <p>Follow us:</p>
+                        <a href="#" class="LinkedIn">
+                            <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0 15.0762C0 6.74987 6.74987 0 15.0762 0C23.4025 0 30.1524 6.74987 30.1524 15.0762C30.1524 23.4025 23.4025 30.1524 15.0762 30.1524C6.74987 30.1524 0 23.4025 0 15.0762Z" fill="white" fill-opacity="0.99"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.8793 9.31124C10.8793 10.2969 10.1373 11.0856 8.94599 11.0856H8.92413C7.77714 11.0856 7.03558 10.2969 7.03558 9.31124C7.03558 8.30471 7.7997 7.53809 8.96848 7.53809C10.1373 7.53809 10.8571 8.30471 10.8793 9.31124ZM10.6542 12.4867V22.7522H7.2376V12.4867H10.6542ZM22.9756 22.7522L22.9758 16.8663C22.9758 13.7132 21.2903 12.2457 19.042 12.2457C17.228 12.2457 16.4158 13.242 15.9624 13.941V12.487H12.5454C12.5904 13.4503 12.5454 22.7525 12.5454 22.7525H15.9624V17.0194C15.9624 16.7126 15.9846 16.4065 16.0749 16.1869C16.3218 15.574 16.884 14.9394 17.8279 14.9394C19.0648 14.9394 19.5592 15.8807 19.5592 17.2602V22.7522H22.9756Z" fill="#46178F"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="Facebook">
+                            <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M31.1143 15.0762C31.1143 6.74984 24.3645 0 16.0381 0C7.71176 0 0.961914 6.74984 0.961914 15.0762C0.961914 23.4026 7.71176 30.1524 16.0381 30.1524C24.3645 30.1524 31.1143 23.4026 31.1143 15.0762Z" fill="white"/>
+                                <path d="M17.1016 23.4517V15.3515H19.8674L20.2821 12.1946H17.1016V10.1791C17.1016 9.26518 17.3598 8.64231 18.693 8.64231H20.3934V5.81965C19.5704 5.73405 18.7432 5.69259 17.9156 5.69545C15.4639 5.69545 13.7855 7.16653 13.7855 9.86829V12.1946H11.0127V15.3515H13.7855V23.4517H17.1016Z" fill="#46178F"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="Instagram">
+                            <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20.4945 8.02246H11.5072C10.0719 8.02246 8.90564 9.18876 8.90564 10.624V19.6099C8.90564 21.0452 10.0719 22.2131 11.5072 22.2131H20.4945C21.9282 22.2131 23.0961 21.0452 23.0961 19.6099V10.624C23.0961 9.1887 21.9282 8.02246 20.4945 8.02246ZM16 19.7887C13.4247 19.7887 11.3284 17.6923 11.3284 15.117C11.3284 12.5417 13.4248 10.4454 16 10.4454C18.577 10.4454 20.6716 12.5417 20.6716 15.117C20.6716 17.6923 18.5753 19.7887 16 19.7887ZM20.8226 11.4113C20.2124 11.4113 19.717 10.9162 19.717 10.306C19.717 9.69719 20.2124 9.20039 20.8226 9.20039C21.4311 9.20039 21.9282 9.69719 21.9282 10.306C21.9282 10.9162 21.4311 11.4113 20.8226 11.4113V11.4113Z" fill="white"/>
+                                <path d="M16.0001 12.4204C14.5139 12.4204 13.3033 13.6293 13.3033 15.1171C13.3033 16.6048 14.5139 17.8154 16.0001 17.8154C17.4878 17.8154 18.6984 16.6048 18.6984 15.1171C18.6984 13.6309 17.4878 12.4204 16.0001 12.4204Z" fill="white"/>
+                                <path d="M16 0C7.67374 0 0.923828 6.74992 0.923828 15.0762C0.923828 23.4025 7.67374 30.1524 16 30.1524C24.3263 30.1524 31.0762 23.4025 31.0762 15.0762C31.0762 6.74998 24.3263 0 16 0V0ZM25.0694 19.6101C25.0694 22.1345 23.0174 24.1866 20.4945 24.1866H11.5072C8.98441 24.1866 6.93073 22.1346 6.93073 19.6101V10.6242C6.93073 8.10159 8.98441 6.04791 11.5072 6.04791H20.4945C23.0174 6.04791 25.0694 8.10159 25.0694 10.6242V19.6101V19.6101Z" fill="white"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="Twitter">
+                            <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15.9619 30.1524C24.2883 30.1524 31.0381 23.4026 31.0381 15.0762C31.0381 6.74984 24.2883 0 15.9619 0C7.63559 0 0.885742 6.74984 0.885742 15.0762C0.885742 23.4026 7.63559 30.1524 15.9619 30.1524Z" fill="white"/>
+                                <path d="M25.1966 10.8344C24.5506 11.1209 23.8556 11.3147 23.1267 11.4012C23.8709 10.9554 24.442 10.2499 24.7115 9.4079C24.0152 9.82097 23.2436 10.1206 22.4232 10.2821C21.7658 9.58205 20.8292 9.14453 19.7921 9.14453C17.8023 9.14453 16.1885 10.7584 16.1885 12.7482C16.1885 13.0306 16.2205 13.3055 16.2823 13.5695C13.2874 13.4192 10.6319 11.9847 8.85437 9.80377C8.54423 10.3359 8.36632 10.9554 8.36632 11.6157C8.36632 12.8656 9.00299 13.9691 9.9694 14.6152C9.37896 14.5966 8.82293 14.4346 8.3373 14.1639C8.33703 14.1792 8.33703 14.1946 8.33703 14.2096C8.33703 15.9557 9.57972 17.412 11.2279 17.7428C10.9259 17.8256 10.6069 17.8694 10.2787 17.8694C10.046 17.8694 9.82052 17.8471 9.60068 17.8052C10.0592 19.2365 11.3897 20.2785 12.967 20.3078C11.7335 21.2745 10.1798 21.8504 8.49102 21.8504C8.20077 21.8504 7.91321 21.8334 7.63184 21.7999C9.22578 22.8227 11.1204 23.4191 13.1554 23.4191C19.7838 23.4191 23.4087 17.928 23.4087 13.1655C23.4087 13.0094 23.4052 12.8538 23.3982 12.6995C24.1028 12.1916 24.7137 11.5571 25.1966 10.8344Z" fill="#46178F"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="Tiktok">
+                            <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="15.9238" cy="15.0762" r="15.0762" fill="white"/>
+                                <path d="M22.8384 14.0904V11.3995C21.5821 11.3995 20.6233 11.0631 20.0046 10.4093C19.3695 9.66315 19.0138 8.71823 18.9985 7.73728V7.54303L16.4622 7.48145C16.4622 7.48145 16.4622 7.59041 16.4622 7.73728V18.4112C16.3752 18.888 16.1444 19.3267 15.801 19.6678C15.4577 20.0089 15.0182 20.2362 14.542 20.3189C14.0657 20.4015 13.5757 20.3356 13.138 20.1301C12.7002 19.9246 12.3359 19.5892 12.0942 19.1694C11.8525 18.7496 11.745 18.2655 11.7863 17.7825C11.8276 17.2995 12.0156 16.8408 12.3249 16.4684C12.6343 16.0959 13.0502 15.8277 13.5164 15.6998C13.9826 15.5719 14.4767 15.5906 14.9319 15.7534V13.1477C14.6665 13.104 14.398 13.0818 14.129 13.0813C13.1612 13.0813 12.2152 13.3692 11.4105 13.9085C10.6058 14.4478 9.97866 15.2144 9.60831 16.1112C9.23796 17.0081 9.14106 17.995 9.32986 18.9471C9.51867 19.8992 9.98469 20.7737 10.669 21.4601C11.3533 22.1466 12.2252 22.614 13.1744 22.8034C14.1236 22.9928 15.1074 22.8956 16.0015 22.5241C16.8956 22.1526 17.6598 21.5235 18.1975 20.7164C18.7352 19.9092 19.0221 18.9603 19.0221 17.9895C19.0216 17.7884 19.009 17.5875 18.9844 17.3878V13.0529C20.1377 13.7754 21.4795 14.1366 22.8384 14.0904Z" fill="#46178F"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="Footer__column">
+                    <h4>About</h4>
+                    <ul class="Footer__list">
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Leadership</a></li>
+                        <li><a href="#">Jobs - HIRING!</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">Investors</a></li>
+                    </ul>
+                </div>
+                <div class="Footer__column">
+                    <h4>Solutions</h4>
+                    <ul class="Footer__list">
+                        <li><a href="#">At School</a></li>
+                        <li><a href="#">At Work</a></li>
+                        <li><a href="#">At Home</a></li>
+                    </ul>
+                </div>
+                <div class="Footer__column">
+                    <h4>Resources</h4>
+                    <ul class="Footer__list">
+                        <li><a href="#">Study with Kurtis</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Kurtis Certified</a></li>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Library</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Safety center</a></li>
+                    </ul>
+                </div>
+                <div class="Footer__column">
+                    <h4>Terms and conditions</h4>
+                    <ul class="Footer__list">
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">US Privacy Laws</a></li>
+                        <li><a href="#">Children’s Privacy Policy</a></li>
+                        <li><a href="#">Inclusion and Accessibility policy</a></li>
+                        <li class="Partners">
+                            <img src="./Image/Partner-1.png" alt="">
+                            <img src="./Image/Partner-2.png" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="Footer__copyright">
+                <p class="Copyright">
+                    Copyright @ 2020, Kurtis All rights reserved.
+                </p>
+                <div class="Credits">
+                    <p class="Design">Design by <a href="https://www.artstation.com/mockup" 
+                        target="_blank" rel="noopener noreferrer">
+                        Carlos López</a></p>
+
+                    <p class="Coded">Coded by <a href="https://github.com/Egorkrinich" 
+                        target="_blank" rel="noopener noreferrer">
+                        Egor</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./Script/Script.js"></script>
 </body>
