Responsive to 650px

--- a/Index.html
+++ b/Index.html
@@ -456,7 +456,7 @@
     <footer>
         <div class="Container">
             <div class="Footer__content">
-                <div class="Footer__main">
+                <div class="Footer__main Footer__column-1">
                     <div class="Footer__logo">
                         <img src="./Image/Logo/Logo-2.svg" alt="">
                     </div>
@@ -501,7 +501,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="Footer__column">
+                <div class="Footer__column Footer__column-2">
                     <h4>About</h4>
                     <ul class="Footer__list">
                         <li><a href="#">Company</a></li>
@@ -512,7 +512,7 @@
                         <li><a href="#">Investors</a></li>
                     </ul>
                 </div>
-                <div class="Footer__column">
+                <div class="Footer__column Footer__column-3">
                     <h4>Solutions</h4>
                     <ul class="Footer__list">
                         <li><a href="#">At School</a></li>
@@ -520,7 +520,7 @@
                         <li><a href="#">At Home</a></li>
                     </ul>
                 </div>
-                <div class="Footer__column">
+                <div class="Footer__column Footer__column-4">
                     <h4>Resources</h4>
                     <ul class="Footer__list">
                         <li><a href="#">Study with Kurtis</a></li>
@@ -532,7 +532,7 @@
                         <li><a href="#">Safety center</a></li>
                     </ul>
                 </div>
-                <div class="Footer__column">
+                <div class="Footer__column Footer__column-5">
                     <h4>Terms and conditions</h4>
                     <ul class="Footer__list">
                         <li><a href="#">Terms and Conditions</a></li>
