Responsive to 320px

--- a/Index.html
+++ b/Index.html
@@ -300,7 +300,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="Process__item">
+                <div class="Process__item Process__item--reverse">
                     <div class="Process__image">
                         <img src="./Image/Process/Process-2.png" alt="">
                     </div>
@@ -351,7 +351,7 @@
                                     <img src="./Image/Avatar.png" alt="">
                                 </div>
                             </div>
-                            <div class="Customer__Review">
+                            <div class="Customer__review">
                                 <div class="Customer__info">
                                     <h3 class="Customer__name">Martha</h3>
                                     <span></span>
@@ -386,7 +386,7 @@
                                     <img src="./Image/Avatar.png" alt="">
                                 </div>
                             </div>
-                            <div class="Customer__Review">
+                            <div class="Customer__review">
                                 <div class="Customer__info">
                                     <h3 class="Customer__name">Martha</h3>
                                     <span></span>
@@ -436,7 +436,7 @@
                     </div>
                 </div>
                 <div class="Learning__content">
-                    <div class="Learning__img">
+                    <div class="Learning__image">
                         <img src="./Image/Learning-1.png" alt="">
                     </div>
                     <div class="Learning__text">
