--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./Style/Style.css">
+
+    <meta name="google" content="notranslate">
+
+    <title>Kurtis Classrom - Make learning fun!</title>
+    <meta name="description" content="Learn faster and with pleasure! We'll help make learning easy, engaging, and effective.">
+
+    <link rel="icon" type="image/png" href="./Favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./Favicon/favicon.svg" />
+    <link rel="shortcut icon" href="./Favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./Favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Kurtis" />
+    <link rel="manifest" href="./Favicon/site.webmanifest" />
+
 </head>
 <body>
     <header>
