--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="Container">
             <div class="Header__logo Logo">
-                <img src="./Image/Logo/Logo-1.svg" alt="">
+                <img src="./Image/Logo/Logo-1.svg" alt="Kurtis Classrom logo">
             </div>
             <div class="Header__right">
                 <button class="Lang Main-button">
@@ -360,7 +360,7 @@
                                     I love these games!
                                 </div>
                                 <div class="Customer__avatar">
-                                    <img src="./Image/Avatar.png" alt="">
+                                    <img src="./Image/Avatar.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="Customer__review">
@@ -395,7 +395,7 @@
                                     I love these games!
                                 </div>
                                 <div class="Customer__avatar">
-                                    <img src="./Image/Avatar.png" alt="">
+                                    <img src="./Image/Avatar.png" alt="Avatar">
                                 </div>
                             </div>
                             <div class="Customer__review">
@@ -470,13 +470,13 @@
             <div class="Footer__content">
                 <div class="Footer__main Footer__column-1">
                     <div class="Footer__logo">
-                        <img src="./Image/Logo/Logo-2.svg" alt="">
+                        <img src="./Image/Logo/Logo-2.svg" alt="Kurtis classrom logo">
                     </div>
-                    <div class="Footer__app">
+                    <div class="Footer__apps">
                         <p>Get the app:</p>
-                        <a href="#"><img src="./Image/Apps/App-Store.png" alt=""></a>
-                        <a href="#"><img src="./Image/Apps/Google-Play.png" alt=""></a>
-                        <a href="#"><img src="./Image/Apps/AppGallery.png" alt=""></a>
+                        <a href="#"><img src="./Image/Apps/App-Store.png" alt="App store"></a>
+                        <a href="#"><img src="./Image/Apps/Google-Play.png" alt="Google play"></a>
+                        <a href="#"><img src="./Image/Apps/AppGallery.png" alt="App gallery"></a>
                     </div>
                     <div class="Footer__socials">
                         <p>Follow us:</p>
@@ -553,8 +553,8 @@
                         <li><a href="#">Children’s Privacy Policy</a></li>
                         <li><a href="#">Inclusion and Accessibility policy</a></li>
                         <li class="Partners">
-                            <img src="./Image/Partner-1.png" alt="">
-                            <img src="./Image/Partner-2.png" alt="">
+                            <img src="./Image/Partner-1.png" alt="Microsoft Partner">
+                            <img src="./Image/Partner-2.png" alt="Google for education">
                         </li>
                     </ul>
                 </div>
